adding new configurations, admin middleware, create admin users
