# app/Http/Controllers/Api/V1/Auth/RegisterController.php
@@ -1,31 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Api\V1\Auth;
-
-use App\Http\Controllers\Controller;
-use App\Http\Requests\Api\V1\Auth\AuthRequest;
-use App\Models\User;
-use Illuminate\Auth\Events\Registered;
-use Illuminate\Http\Request;
-use Illuminate\Http\Response;
-use Illuminate\Support\Facades\Hash;
-
-class RegisterController extends Controller
-{
-    public function __invoke(AuthRequest $request)
-    {
-        return User::all();
-        $user = User::create([
-            'name' => $request->validated('name'),
-            'email' => $request->validated('email'),
-            'password' => Hash::make($request->validated('password')),
-        ]);
-
-        event(new Registered($user));
-
-        $device = substr($request->userAgent() ?? '', 0, 255);
-        return response()->json([
-            'access_token' => $user->createToken($device)->plainTextToken,
-        ], Response::HTTP_CREATED);
-    }
-}
