# app/Http/Requests/Api/V1/Auth/AuthRequest.php
@@ -23,6 +23,8 @@ class AuthRequest extends FormRequest
     public function rules(): array
     {
         return [
+            'first_name' => ['required', 'string', 'max:255'],
+            'last_name' => ['required', 'string', 'max:255'],
             'email' => ['required', 'string', 'email', 'max:255', 'unique:users'],
             'password' => ['required', 'confirmed', Password::defaults()],
             'is_admin' => ['required', 'boolean'],
